fix(report): allow overflow to prevent input outline cutting
related to OPT-7078

--- a/client/src/components/Reports/Report.scss
+++ b/client/src/components/Reports/Report.scss
@@ -62,7 +62,6 @@
     .info {
       display: flex;
       flex-direction: column;
-      overflow: hidden;
       flex-grow: 1;
       min-width: 0;
     }
